// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilterForm should render component with data 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-86 el-snack-holder"
      />
      <form>
        <div
          class="el-form-layout-has-margin el-form-layout"
        >
          <div
            class="mocked-styled-128 el-input-wrap-full"
          >
            <h2
              class="el-text-base el-subtitle"
            >
              Filters
            </h2>
            <p
              class="el-text-base el-body-text el-has-grey-text"
            >
              Apply a filter to get started. Developer and month are required by default.
            </p>
          </div>
          <div
            class="mocked-styled-126 el-input-wrap"
          >
            <label
              class="el-flex el-mb3 el-label"
              for="developer-search-box"
            >
              Company
            </label>
            <div
              aria-controls="test-static-id"
              aria-expanded="false"
              aria-haspopup="listbox"
              class="mocked-styled-77 el-searchable-dropdown-container"
              role="combobox"
            >
              <input
                id="developer-search-box"
                readonly=""
                style="display: none;"
                value=""
              />
              <span
                class="mocked-styled-80 el-searchable-dropdown-search-input-add-on el-input-add-on"
              >
                <span
                  class="el-intent-default el-icon"
                  style="font-size: 1rem;"
                >
                  <svg
                    fill="none"
                    height="1em"
                    role="img"
                    style="font-size: 1rem;"
                    title="Icon image with name search"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m21.71 20.29-5.4-5.39A7.9 7.9 0 0 0 18 10a8 8 0 1 0-8 8 7.9 7.9 0 0 0 4.9-1.69l5.39 5.4a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42M4 10a6 6 0 1 1 12 0 6 6 0 0 1-12 0"
                      fill="currentColor"
                    />
                  </svg>
                </span>
              </span>
              <input
                aria-label="Input type undefined"
                class="mocked-styled-82 el-searchable-dropdown-search-input el-input"
                data-testid="search-input"
                name="developerId"
                placeholder="Search developer organisations"
                value=""
              />
            </div>
          </div>
          <div
            class="mocked-styled-126 el-input-wrap"
          >
            <div
              class="mocked-styled-35 el-input-group"
            >
              <input
                aria-label="Input type month"
                class="mocked-styled-33 el-input"
                id="test-static-id"
                name="month"
                type="month"
                value="2019-09"
              />
              <label
                class="mocked-styled-36 el-label"
                for="test-static-id"
              >
                Month
              </label>
            </div>
          </div>
          <div
            class="mocked-styled-126 el-input-wrap"
          >
            <div
              class="mocked-styled-35 el-input-group"
            >
              <label
                class="mocked-styled-36 el-label"
              >
                App
              </label>
              <select
                aria-label="Select an item from the dropdown list"
                class="mocked-styled-76 el-select"
                disabled=""
                name="appId"
              >
                <option
                  value=""
                >
                  Please Select
                </option>
                <option
                  value="f83e679e-a7cd-4889-a7f9-f4a8a8ed5a09"
                >
                  Reapit Insights
                </option>
              </select>
            </div>
          </div>
          <div
            class="mocked-styled-126 el-input-wrap"
          >
            <div
              class="mocked-styled-35 el-input-group"
            >
              <label
                class="mocked-styled-36 el-label"
              >
                Customer
              </label>
              <select
                aria-label="Select an item from the dropdown list"
                class="mocked-styled-76 el-select"
                disabled=""
                name="customerId"
              >
                <option
                  value=""
                >
                  Please Select
                </option>
                <option
                  value="SBOX"
                >
                  Sandbox Estates
                   (Code: 
                  SBOX
                  )
                </option>
              </select>
            </div>
          </div>
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-86 el-snack-holder"
    />
    <form>
      <div
        class="el-form-layout-has-margin el-form-layout"
      >
        <div
          class="mocked-styled-128 el-input-wrap-full"
        >
          <h2
            class="el-text-base el-subtitle"
          >
            Filters
          </h2>
          <p
            class="el-text-base el-body-text el-has-grey-text"
          >
            Apply a filter to get started. Developer and month are required by default.
          </p>
        </div>
        <div
          class="mocked-styled-126 el-input-wrap"
        >
          <label
            class="el-flex el-mb3 el-label"
            for="developer-search-box"
          >
            Company
          </label>
          <div
            aria-controls="test-static-id"
            aria-expanded="false"
            aria-haspopup="listbox"
            class="mocked-styled-77 el-searchable-dropdown-container"
            role="combobox"
          >
            <input
              id="developer-search-box"
              readonly=""
              style="display: none;"
              value=""
            />
            <span
              class="mocked-styled-80 el-searchable-dropdown-search-input-add-on el-input-add-on"
            >
              <span
                class="el-intent-default el-icon"
                style="font-size: 1rem;"
              >
                <svg
                  fill="none"
                  height="1em"
                  role="img"
                  style="font-size: 1rem;"
                  title="Icon image with name search"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m21.71 20.29-5.4-5.39A7.9 7.9 0 0 0 18 10a8 8 0 1 0-8 8 7.9 7.9 0 0 0 4.9-1.69l5.39 5.4a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42M4 10a6 6 0 1 1 12 0 6 6 0 0 1-12 0"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </span>
            <input
              aria-label="Input type undefined"
              class="mocked-styled-82 el-searchable-dropdown-search-input el-input"
              data-testid="search-input"
              name="developerId"
              placeholder="Search developer organisations"
              value=""
            />
          </div>
        </div>
        <div
          class="mocked-styled-126 el-input-wrap"
        >
          <div
            class="mocked-styled-35 el-input-group"
          >
            <input
              aria-label="Input type month"
              class="mocked-styled-33 el-input"
              id="test-static-id"
              name="month"
              type="month"
              value="2019-09"
            />
            <label
              class="mocked-styled-36 el-label"
              for="test-static-id"
            >
              Month
            </label>
          </div>
        </div>
        <div
          class="mocked-styled-126 el-input-wrap"
        >
          <div
            class="mocked-styled-35 el-input-group"
          >
            <label
              class="mocked-styled-36 el-label"
            >
              App
            </label>
            <select
              aria-label="Select an item from the dropdown list"
              class="mocked-styled-76 el-select"
              disabled=""
              name="appId"
            >
              <option
                value=""
              >
                Please Select
              </option>
              <option
                value="f83e679e-a7cd-4889-a7f9-f4a8a8ed5a09"
              >
                Reapit Insights
              </option>
            </select>
          </div>
        </div>
        <div
          class="mocked-styled-126 el-input-wrap"
        >
          <div
            class="mocked-styled-35 el-input-group"
          >
            <label
              class="mocked-styled-36 el-label"
            >
              Customer
            </label>
            <select
              aria-label="Select an item from the dropdown list"
              class="mocked-styled-76 el-select"
              disabled=""
              name="customerId"
            >
              <option
                value=""
              >
                Please Select
              </option>
              <option
                value="SBOX"
              >
                Sandbox Estates
                 (Code: 
                SBOX
                )
              </option>
            </select>
          </div>
        </div>
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`FilterForm should render component with no data 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-86 el-snack-holder"
      />
      <form>
        <div
          class="el-form-layout-has-margin el-form-layout"
        >
          <div
            class="mocked-styled-128 el-input-wrap-full"
          >
            <h2
              class="el-text-base el-subtitle"
            >
              Filters
            </h2>
            <p
              class="el-text-base el-body-text el-has-grey-text"
            >
              Apply a filter to get started. Developer and month are required by default.
            </p>
          </div>
          <div
            class="mocked-styled-126 el-input-wrap"
          >
            <label
              class="el-flex el-mb3 el-label"
              for="developer-search-box"
            >
              Company
            </label>
            <div
              aria-controls="test-static-id"
              aria-expanded="false"
              aria-haspopup="listbox"
              class="mocked-styled-77 el-searchable-dropdown-container"
              role="combobox"
            >
              <input
                id="developer-search-box"
                readonly=""
                style="display: none;"
                value=""
              />
              <span
                class="mocked-styled-80 el-searchable-dropdown-search-input-add-on el-input-add-on"
              >
                <span
                  class="el-intent-default el-icon"
                  style="font-size: 1rem;"
                >
                  <svg
                    fill="none"
                    height="1em"
                    role="img"
                    style="font-size: 1rem;"
                    title="Icon image with name search"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m21.71 20.29-5.4-5.39A7.9 7.9 0 0 0 18 10a8 8 0 1 0-8 8 7.9 7.9 0 0 0 4.9-1.69l5.39 5.4a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42M4 10a6 6 0 1 1 12 0 6 6 0 0 1-12 0"
                      fill="currentColor"
                    />
                  </svg>
                </span>
              </span>
              <input
                aria-label="Input type undefined"
                class="mocked-styled-82 el-searchable-dropdown-search-input el-input"
                data-testid="search-input"
                name="developerId"
                placeholder="Search developer organisations"
                value=""
              />
            </div>
          </div>
          <div
            class="mocked-styled-126 el-input-wrap"
          >
            <div
              class="mocked-styled-35 el-input-group"
            >
              <input
                aria-label="Input type month"
                class="mocked-styled-33 el-input"
                id="test-static-id"
                name="month"
                type="month"
                value="2019-09"
              />
              <label
                class="mocked-styled-36 el-label"
                for="test-static-id"
              >
                Month
              </label>
            </div>
          </div>
          <div
            class="mocked-styled-126 el-input-wrap"
          >
            <div
              class="mocked-styled-35 el-input-group"
            >
              <label
                class="mocked-styled-36 el-label"
              >
                App
              </label>
              <select
                aria-label="Select an item from the dropdown list"
                class="mocked-styled-76 el-select"
                disabled=""
                name="appId"
              >
                <option
                  value=""
                >
                  Please Select
                </option>
              </select>
            </div>
          </div>
          <div
            class="mocked-styled-126 el-input-wrap"
          >
            <div
              class="mocked-styled-35 el-input-group"
            >
              <label
                class="mocked-styled-36 el-label"
              >
                Customer
              </label>
              <select
                aria-label="Select an item from the dropdown list"
                class="mocked-styled-76 el-select"
                disabled=""
                name="customerId"
              >
                <option
                  value=""
                >
                  Please Select
                </option>
              </select>
            </div>
          </div>
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-86 el-snack-holder"
    />
    <form>
      <div
        class="el-form-layout-has-margin el-form-layout"
      >
        <div
          class="mocked-styled-128 el-input-wrap-full"
        >
          <h2
            class="el-text-base el-subtitle"
          >
            Filters
          </h2>
          <p
            class="el-text-base el-body-text el-has-grey-text"
          >
            Apply a filter to get started. Developer and month are required by default.
          </p>
        </div>
        <div
          class="mocked-styled-126 el-input-wrap"
        >
          <label
            class="el-flex el-mb3 el-label"
            for="developer-search-box"
          >
            Company
          </label>
          <div
            aria-controls="test-static-id"
            aria-expanded="false"
            aria-haspopup="listbox"
            class="mocked-styled-77 el-searchable-dropdown-container"
            role="combobox"
          >
            <input
              id="developer-search-box"
              readonly=""
              style="display: none;"
              value=""
            />
            <span
              class="mocked-styled-80 el-searchable-dropdown-search-input-add-on el-input-add-on"
            >
              <span
                class="el-intent-default el-icon"
                style="font-size: 1rem;"
              >
                <svg
                  fill="none"
                  height="1em"
                  role="img"
                  style="font-size: 1rem;"
                  title="Icon image with name search"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m21.71 20.29-5.4-5.39A7.9 7.9 0 0 0 18 10a8 8 0 1 0-8 8 7.9 7.9 0 0 0 4.9-1.69l5.39 5.4a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42M4 10a6 6 0 1 1 12 0 6 6 0 0 1-12 0"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </span>
            <input
              aria-label="Input type undefined"
              class="mocked-styled-82 el-searchable-dropdown-search-input el-input"
              data-testid="search-input"
              name="developerId"
              placeholder="Search developer organisations"
              value=""
            />
          </div>
        </div>
        <div
          class="mocked-styled-126 el-input-wrap"
        >
          <div
            class="mocked-styled-35 el-input-group"
          >
            <input
              aria-label="Input type month"
              class="mocked-styled-33 el-input"
              id="test-static-id"
              name="month"
              type="month"
              value="2019-09"
            />
            <label
              class="mocked-styled-36 el-label"
              for="test-static-id"
            >
              Month
            </label>
          </div>
        </div>
        <div
          class="mocked-styled-126 el-input-wrap"
        >
          <div
            class="mocked-styled-35 el-input-group"
          >
            <label
              class="mocked-styled-36 el-label"
            >
              App
            </label>
            <select
              aria-label="Select an item from the dropdown list"
              class="mocked-styled-76 el-select"
              disabled=""
              name="appId"
            >
              <option
                value=""
              >
                Please Select
              </option>
            </select>
          </div>
        </div>
        <div
          class="mocked-styled-126 el-input-wrap"
        >
          <div
            class="mocked-styled-35 el-input-group"
          >
            <label
              class="mocked-styled-36 el-label"
            >
              Customer
            </label>
            <select
              aria-label="Select an item from the dropdown list"
              class="mocked-styled-76 el-select"
              disabled=""
              name="customerId"
            >
              <option
                value=""
              >
                Please Select
              </option>
            </select>
          </div>
        </div>
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
